[package]
name = "jfeed"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
