[package]
name = "jfeed"
version = "0.1.0"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
edition = "2024"
license = "MIT"
description = "crate to read and write JSON feeds."
homepage = "https://github.com/bryceac/jfeed"
readme = "README.md"
repository = "https://github.com/bryceac/jfeed"
keywords = ["json", "feed", "jfeed"]

[dependencies]
chrono = { version = "0.4.45", features = ["serde", "alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
